fix: z-index

--- a/src/components/thank-you-card/ThankYouCard.scss
+++ b/src/components/thank-you-card/ThankYouCard.scss
@@ -13,7 +13,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 10;
+  z-index: 1500;
   
   img {
     margin: 0 auto;
